<resources>
    <string name="app_name">车况险助手</string>
    <string name="skip">Y U DO DIS TO ME?</string>
    <string name="register_account">注册帐号</string>
    <string name="login_text">登录</string>
    <string name="login_next">下一步</string>
    <string name="please_input_your_nick_name"><font size="14">你的手机号/邮箱</font></string>
    <string name="please_input_your_password"><font size="14">请输入密码</font></string>
    <string name="register_doing">还没有注册功能&#8230;</string>
    <string name="loading_title">登录中&#8230;</string>
    <string name="forget_password">忘记密码?</string>
    <string name="image_22">22</string>
    <string name="image_33">33</string>
    <string name="image_logo">logo</string>
    <string name="nick_name_clear">name_clear</string>
    <string name="pass_word_clear">pwd_clear</string>


    <string name="login_title">登录</string>

    <string name="tabbar_home">首页</string>
    <string name="tabbar_publish">预检</string>
    <string name="tabbar_my">我的</string>

    <string name="official_web" translatable="false">官  网 :</string>
    <string name="official_web_cont" translatable="false">www.shifukanche.com</string>
    <string name="version" translatable="false">版  本 :</string>
    <string name="service" translatable="false">客  服 :</string>
    <string name="service_phone" translatable="false">4008188858</string>
    <string name="copyright" translatable="false">Copyright©2014 \n 普信恒业科技发展(北京)有限公司版权所有</string>
    <string name="address" translatable="false">地  址 :</string>
    <string name="address_cont" translatable="false">北京市朝阳区温特莱中心15楼</string>
    <string name="str_check_version" translatable="false">更新版本</string>
    <string name="str_check_version_ing" translatable="false">检查版本中&#8230;</string>

    <string name="cc_carbaserecord_symbol">*</string>
    <string name="carcheck_text_vin">VIN码</string>
    <string name="carcheck_text_brand">品牌型号</string>
    <string name="carcheck_text_yearconfig">年款配置</string>
    <string name="carcheck_text_factorydate">出场日期</string>
    <string name="carcheck_text_mileage">(单位：km)</string>
    <string name="carcheck_text_mileagename">里程数</string>
    <string name="carcheck_text_registdate">登记日期</string>
    <string name="carcheck_text_environmentalevel">环保标准</string>
    <string name="carcheck_text_procedue">资料手续</string>
    <string name="carcheck_text_marketname">市场名称</string>
    <string name="carcheck_text_carsellername">车商名称</string>
    <string name="carcheck_text_carsellercontaction">车商联系方式</string>
    <string name="carcheck_text_trasactioncount">过户次数</string>
    <string name="carcheck_text_carsellerprice">车商报价</string>
    <string name="carcheck_text_nothing_space"> </string>
    <string name="carcheck_text_count">(次)</string>
    <string name="carcheck_text_wan">(万)</string>
    <string name="carcheck_text_to">至</string>
    <string name="carcheck_text_carentity">车身周正</string>
    <string name="carcheck_text_remark">备注</string>
    <string name="carcheck_text_select">请选择</string>
    <string name="carcheck_photo_left">左前45度</string>
    <string name="carcheck_photo_symbol">*</string>
    <string name="str_car_comment_input_serious">请认真填写用户评估</string>
    <string name="carcheck_comment_submit_report">提交报告</string>
    <string name="carcheck_text_link_qr">扫一扫关联二维码</string>
    <string name="carcheck_price">去估价</string>
    <string name="carcheck_price_guesss">车估价</string>
    <string name="carcheck_wan">（万）</string>

</resources>
